--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,15 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans');
 
+html {
+  background-color: #F0F0F0;
+}
+
+main {
+  background-color: #FFF;
+  margin: 1em;
+  padding: 1em;
+}
+
 h1 {
   font-family: 'Open Sans', 'Roboto', sans-serif;
 }
