--- a/src/ContactForm/ContactFormStyle.css
+++ b/src/ContactForm/ContactFormStyle.css
@@ -1,4 +1,5 @@
 .ContactForm {
+  position: relative;
   max-width: 800px;
   margin: 1em auto;
   padding: 1em;
@@ -18,6 +19,15 @@
 .sendButton {
   margin-top: 1em;
   display: block;
+  text-align: center;
+}
+
+.loadingIcon {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  padding: 2em;
   text-align: center;
 }
 
