--- a/src/ContactForm/ContactFormStyle.css
+++ b/src/ContactForm/ContactFormStyle.css
@@ -2,9 +2,13 @@
   position: relative;
   max-width: 800px;
   margin: 1em auto;
-  padding: 1em;
+  padding: 0;
   border-top: 6px solid #FF7043;
   text-align: left;
+}
+
+.formInputs {
+  padding: 1em;
 }
 
 .halfWidth {
@@ -29,6 +33,31 @@
   transform: translate(-50%,-50%);
   padding: 2em;
   text-align: center;
+}
+
+.FormResult {
+  padding: 1.2em 1em;
+  border-radius: 0;
+  display: block;
+  margin: 0;
+  text-align: center;
+  border-radius: 0 0 4px 4px;
+}
+
+.FormResult.ok {
+  background-color: #7CB342;
+  color: white;
+}
+
+.FormResult.error {
+  background-color: #EF5350;
+  color: white;
+}
+
+.FormResult .icon {
+  margin-right: 0.25em;
+  vertical-align: middle;
+  margin-top: -4px;
 }
 
 @media screen and (max-width: 480px) {
