--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,26 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans');
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,600,700,800');
+
+html, body {
+  padding: 0;
+  margin: 0;
+}
 
 html {
-  background-color: #F0F0F0;
+  background-color: #212121;
 }
 
 main {
   background-color: #FFF;
-  margin: 1em;
-  padding: 1em;
+  padding-bottom: 5em;
 }
 
 h1 {
-  font-family: 'Open Sans', 'Roboto', sans-serif;
+  font-family: 'Montserrat', 'Roboto', sans-serif;
+}
+
+.summary {
+  max-width: 1400px;
+  margin: 5em auto;
 }
 
 .center {
