Reworked team image, responsive design

--- a/src/ContactForm/ContactFormStyle.css
+++ b/src/ContactForm/ContactFormStyle.css
@@ -7,7 +7,7 @@
   max-width: 800px;
   margin: 1em auto;
   padding: 0;
-  border-top: 6px solid #FF7043;
+  border-top: 6px solid #212121;
   text-align: left;
 }
 
