--- a/src/App.css
+++ b/src/App.css
@@ -20,9 +20,15 @@ h1 {
 
 .summary {
   max-width: 1400px;
-  margin: 5em auto;
+  margin: 8em auto;
 }
 
 .center {
   text-align: center;
+}
+
+@media screen and (max-width: 700px) {
+  .summary {
+    margin: 4em auto;
+  }
 }
