--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
 html, body {
   padding: 0;
   margin: 0;
+  font-family: 'Montserrat', 'Roboto', sans-serif;
 }
 
 html {
@@ -14,8 +15,9 @@ main {
   padding-bottom: 5em;
 }
 
-h1 {
-  font-family: 'Montserrat', 'Roboto', sans-serif;
+h2 {
+  font-size: 1.7em;
+  font-weight: 500;
 }
 
 .summary {
@@ -23,12 +25,37 @@ h1 {
   margin: 8em auto;
 }
 
+.summary .sectionTitle {
+  margin-bottom: 3em;
+}
+
+.summary#cameramakers .MultiColumn:nth-of-type(n+3) {
+  margin-top: 5em;
+}
+
+.leftBorder {
+  border-left: 5px solid #212121;
+  padding-left: 1em;
+}
+
 .center {
   text-align: center;
+}
+
+.left {
+  text-align: left;
 }
 
 @media screen and (max-width: 700px) {
   .summary {
     margin: 4em auto;
   }
+
+  .summary .sectionTitle {
+    margin-bottom: 2em;
+  }
+
+  .summary#cameramakers .MultiColumn:nth-of-type(n+3) {
+    margin-top: initial;
+}
 }
