--- a/src/FullWidthImage/FullWidthImage.css
+++ b/src/FullWidthImage/FullWidthImage.css
@@ -16,3 +16,10 @@
 .FullWidthImage .content img {
   width: 100%;
 }
+
+.FullWidthImage .content:hover {
+  -webkit-filter: brightness(1.1);
+  -moz-filter: brightness(1.1);
+  -o-filter: brightness(1.1);
+  filter: brightness(1.1);
+}
