--- a/src/TitleImage/TitleImage.css
+++ b/src/TitleImage/TitleImage.css
@@ -3,7 +3,7 @@
   background-size: cover;
   min-height: 700px;
 
-  background: url('../assets/background_02_optimized.jpg') no-repeat center center fixed;
+  background: url('../assets/background_02_optimized.jpg') no-repeat center center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
