Imported logos, implemented a header menu, added option for title to be an image

--- a/src/ContactForm/ContactFormStyle.css
+++ b/src/ContactForm/ContactFormStyle.css
@@ -7,7 +7,7 @@
   max-width: 800px;
   margin: 1em auto;
   padding: 0;
-  border-top: 6px solid #212121;
+  border-top: 6px solid #DCAC46;
   text-align: left;
 }
 
