Analytics tracking and additional content

--- a/app/src/FullWidthImage/FullWidthImage.css
+++ b/app/src/FullWidthImage/FullWidthImage.css
@@ -2,6 +2,8 @@
   position: relative;
   min-height: 400px;
   margin: 0 auto;
+  color: white;
+  text-shadow: 1px 1px 2px black;
 }
 
 .FullWidthImage .content {
